# simple_dungeon_game

./: .gitignore  .gitmodules  README.md  engine.py  game.py  generate.py  mlc.json
client/: client.py  engine.py  game.py
configs/: core.mlc  game_objects.mlc  protocols.mlc
configs/data/: level.xml
configs/data_json/: level.json  objects.json
configs/data_xml/: objects.xml
server/: http_server.py  main.py
server_cpp/: CMakeLists.txt
server_cpp/src/: Factory.h  HttpServer.cpp  HttpServer.h  main.cpp  utils.cpp  utils.h
server_cpp/src/ml/: Generics.cpp  Generics.h  IntrusivePtr.cpp  converters.cpp
server_php/: index.php
server_python/: http_server.py  main.py
